[gd_scene load_steps=19 format=3 uid="uid://de36frn825wqg"]

[ext_resource type="Script" path="res://enemy/boss/Boss.gd" id="1_wlxj1"]
[ext_resource type="Script" path="res://common/Health.gd" id="2_iu1kx"]
[ext_resource type="PackedScene" uid="uid://btbk41nxhucgu" path="res://scenes/enemies/fire_demon.tscn" id="2_qajw5"]
[ext_resource type="PackedScene" uid="uid://b0gwjrkr0mtl4" path="res://scenes/enemies/fire_imp.tscn" id="3_83lta"]
[ext_resource type="PackedScene" uid="uid://cr54n4tv8h007" path="res://scenes/enemies/ice_imp.tscn" id="4_qb36h"]
[ext_resource type="PackedScene" uid="uid://hpc1asacwnb1" path="res://scenes/enemies/yeti.tscn" id="5_x6uc6"]
[ext_resource type="Texture2D" uid="uid://csgtksdac2pdm" path="res://enemy/fire_demon/demon.png" id="6_hvkts"]
[ext_resource type="Shader" path="res://shader/damage_effect.gdshader" id="6_u4bfa"]
[ext_resource type="Texture2D" uid="uid://c7ek30hlrsda7" path="res://enemy/fire_imp/fire_imp.png" id="7_fi04u"]
[ext_resource type="Texture2D" uid="uid://be64yd08d7fpf" path="res://enemy/ice_imp/ice_imp.png" id="8_86cpp"]
[ext_resource type="Texture2D" uid="uid://bryfn1onysuty" path="res://enemy/yeti/yeti_atlas.png" id="9_amjyp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k1w3x"]
atlas = ExtResource("6_hvkts")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugqf0"]
atlas = ExtResource("7_fi04u")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_diu31"]
atlas = ExtResource("8_86cpp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eofv"]
atlas = ExtResource("9_amjyp")
region = Rect2(0, 0, 24, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_u2qb2"]
radius = 9.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pj7jt"]
resource_local_to_scene = true
shader = ExtResource("6_u4bfa")
shader_parameter/flash_red = false

[sub_resource type="SpriteFrames" id="SpriteFrames_pluh2"]

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("animated_sprite2d")]
collision_layer = 4
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_wlxj1")
animated_sprite2d = NodePath("AnimatedSprite2D")
summonables = Array[PackedScene]([ExtResource("2_qajw5"), ExtResource("3_83lta"), ExtResource("4_qb36h"), ExtResource("5_x6uc6")])
thumbnails = Array[Texture2D]([SubResource("AtlasTexture_k1w3x"), SubResource("AtlasTexture_ugqf0"), SubResource("AtlasTexture_diu31"), SubResource("AtlasTexture_3eofv")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("CircleShape2D_u2qb2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_pj7jt")
sprite_frames = SubResource("SpriteFrames_pluh2")

[node name="CastTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PathfindingTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Health" type="Node" parent="."]
script = ExtResource("2_iu1kx")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.125
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="RedFlashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
[connection signal="timeout" from="PathfindingTimer" to="." method="_on_pathfinding_timer_timeout"]
[connection signal="death" from="Health" to="." method="_on_death"]
[connection signal="health_changed" from="Health" to="." method="_on_health_health_changed"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="RedFlashTimer" to="." method="_on_red_flash_timer_timeout"]
